--- a/src/main/resources/templates/bookdetails.html
+++ b/src/main/resources/templates/bookdetails.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 <p>Welcome to the Book details page</p>
+<table>
+    <thead>
+    <tr>
+        <th>Name</th>
+        <th>Author Name</th>
+        <th>Year of Publication</th>
+        <th>Number of copies</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:field="${book}">
+        <td th:text="${book.bookName}">Text ...</td>
+        <td th:text="${book.authorName}">Text ...</td>
+        <td th:text="${book.yearOfPublication}">Text ...</td>
+        <td th:text="${book.numOfCopies}">Text...</td>
+    </tr>
+    </tbody>
+</table>
+
+
 </body>
 </html>
