--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -5,13 +5,6 @@
     <title>Books</title>
 </head>
 <body>
-<form action="#" method="get" th:action="@{/books/find}" th:object="${book}">
-    <p>Id: <input type="text" th:field="*{name}"/></p>
-    <p>
-        <button type="submit" value="Search books">Search Books</button>
-    </p>
-</form>
-
 <table>
     <thead th:if="${not #lists.isEmpty(books)}">
     <tr>
@@ -22,18 +15,22 @@
     <tr>
     </thead>
     <tbody th:if="${not #lists.isEmpty(books)}">
-    <tr th:each="book : ${books}">
-        <td th:text="${book.bookName}">Title ...</a></td>
-        <td th:text="${book.authorName}">authorName ...</td>
-        <td th:text="${book.yearOfPublication}">yearOfPublication ...</td>
-        <td th:text="${book.numOfCopies}">copies ...</td>
+    <tr th:each="row : ${books}">
+        <td th:text="${row.bookName}">Title ...</td>
+        <td th:text="${row.authorName}">authorName ...</td>
+        <td th:text="${row.yearOfPublication}">yearOfPublication ...</td>
+        <td th:text="${row.numOfCopies}">copies ...</td>
     </tr>
     </tbody>
+</table>
+<table>
     <tbody th:if="${#lists.isEmpty(books)}">
     <tr>
-        <td colspan="3">No Books in library</td>
+        <td colspan="3">Sorry!No Books in library</td>
     </tr>
     </tbody>
 </table>
 </body>
+
+
 </html>
