--- a/src/main/resources/templates/bookdetails.html
+++ b/src/main/resources/templates/bookdetails.html
@@ -2,12 +2,12 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Book Details</title>
 </head>
 <body>
 <p>Welcome to the Book details page</p>
 <table>
-    <thead th:if="${book.bookName ne null}">
+    <thead th:if="${not #lists.isEmpty(books)}">
     <tr>
         <th>Book Name</th>
         <th>Author Name</th>
@@ -15,15 +15,15 @@
         <th>Number Of Copies</th>
     </tr>
     </thead>
-    <tbody th:if="${book.bookName ne null}">
-    <tr>
-        <td th:text="${book.bookName}">Title ...</td>
-        <td th:text="${book.authorName}">Author ...</td>
+    <tbody th:if="${not #lists.isEmpty(books)}">
+    <tr th:each="book : ${books}">
+        <td th:text="${book.bookName}">Title ...</a></td>
+        <td th:text="${book.authorName}">authorName ...</td>
         <td th:text="${book.yearOfPublication}">yearOfPublication ...</td>
-        <td th:text="${book.numOfCopies}">copies...</td>
+        <td th:text="${book.numOfCopies}">copies ...</td>
     </tr>
     </tbody>
-    <tbody th:if="${book.bookName == null}">
+    <tbody th:if="${#lists.isEmpty(books)}">
     <tr>
         <td colspan="3">Sorry! No books found with the specified book name or Author name.</td>
     </tr>
