--- a/src/main/resources/templates/bookdetails.html
+++ b/src/main/resources/templates/bookdetails.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Book Details</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<p>Welcome to the Book details page</p>
-<table>
+<div class="container mt-5">
+    <h2 align="center">Welcome to the Book details page</h2>
+<table class="table table-bordered table-sm mt-2">
     <thead th:if="${not #lists.isEmpty(books)}">
     <tr>
         <th>Book Name</th>
@@ -29,5 +31,7 @@
     </tr>
     </tbody>
 </table>
+    <a href="#" th:href="@{/books/}" >Home</a>
+</div>
 </body>
 </html>
