--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -9,6 +9,7 @@
 
 <div class="container mt-5">
     <h2 align="center">Welcome to the Books page</h2>
+    <form th:action="@{/books/checkout}" th:object="${books}" method="put">
 <table class="table table-bordered table-sm mt-2">
     <thead th:if="${not #lists.isEmpty(books)}">
     <tr>
@@ -16,6 +17,7 @@
         <th>Author Name</th>
         <th>Year Of Publication</th>
         <th>Number Of Copies</th>
+        <th>Checkout</th>
     <tr>
     </thead>
     <tbody th:if="${not #lists.isEmpty(books)}">
@@ -24,9 +26,17 @@
         <td th:text="${row.authorName}">authorName ...</td>
         <td th:text="${row.yearOfPublication}">yearOfPublication ...</td>
         <td th:text="${row.numOfCopies}">copies ...</td>
+        <td> <input
+            type="checkbox"
+            name="checkout"
+            th:value="${row.id}"/></td>
     </tr>
     </tbody>
 </table>
+    <div class="col-xs-20">
+        <input type="submit" value="submit"/>
+    </div>
+    </form>
 <table class="table table-bordered table-sm mt-2">
     <tbody th:if="${#lists.isEmpty(books)}">
     <tr>
@@ -44,6 +54,7 @@
     <button type="submit" class="btn btn-info" >Search</button>
 </form>
 </div>
+
 </body>
 
 </html>
