Add. VP10 Service tests for view checkout books
Co-authored-by: Vidhiya Priya
<vidhiyapriya@gmail.com
>

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,8 @@
 <body>
 <table>
     <td th:text="${welcomeText}">Title ...</td>
+
+    <a href="#" th:href="@{/users/checkoutBooks}">View Checkout books</a>
 </table>
 </body>
 </html>
