--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -34,7 +34,7 @@
     </tbody>
 </table>
     <div class="col-xs-20">
-        <input type="submit" value="submit"/>
+        <input type="submit" value="Check Out"/>
     </div>
     </form>
 <table class="table table-bordered table-sm mt-2">
@@ -44,7 +44,7 @@
     </tr>
     </tbody>
 </table>
-
+<!-- commenting out for showcase
 <form th:action="@{/books/findbook}" method="get">
     <input type="text" name="name" th:value="${name}"  placeholder="Find by Book Name" size="30" >
     <button type="submit" class="btn btn-info" >Search</button>
@@ -52,7 +52,7 @@
 <form th:action="@{/books/findbyauthor}" method="get">
     <input type="text" name="name" th:value="${name}"  placeholder="Find by Author Name" size="30" >
     <button type="submit" class="btn btn-info" >Search</button>
-</form>
+</form> -->
 </div>
 
 </body>
