--- a/src/main/resources/templates/findbook.html
+++ b/src/main/resources/templates/findbook.html
@@ -31,7 +31,7 @@
     </tr>
     </tbody>
 </table>
-    <a href="#" th:href="@{/books/}" >Home</a>
+    <a href="#" th:href="@{/books/}" >View All Books</a>
 </div>
 
 </body>
