--- a/src/main/resources/templates/findbook.html
+++ b/src/main/resources/templates/findbook.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container mt-5">
     <h2 align="center">Welcome to the Book details page</h2>
-<table class="table table-bordered table-sm mt-2">
+<table class="table table-bordered table-striped">
     <thead th:if="${not #lists.isEmpty(books)}">
     <tr>
         <th>Book Name</th>
