--- a/src/main/resources/templates/viewcheckoutbooks.html
+++ b/src/main/resources/templates/viewcheckoutbooks.html
@@ -7,16 +7,24 @@
 </head>
 <body>
 <div class="container mt-5">
-    <h2 align="center">Welcome to the Your Checkout Books page</h2>
-    <form th:action="@{}" th:object="${user}" method="POST">
-        <table class="table table-bordered table-sm mt-2">
+    <h2 align="center">Your Checkout Books</h2>
+
+    <div align="right">
+        <form th:action="@{/findbook}" method="get">
+            <input type="text" name="name" th:value="${name}" placeholder="Find by Book or Author Name" size="30">
+            <button type="submit" class="btn btn-primary">Search</button>
+        </form>
+    </div>
+
+    <form action="#">
+        <table class="table  table-bordered table-striped">
             <thead th:if="${not #lists.isEmpty(books)}">
             <tr>
                 <th>Book Name</th>
                 <th>Author Name</th>
                 <th>Year Of Publication</th>
                 <th>Number Of Copies</th>
-                <th>Checkout</th>
+                <th>Return</th>
             <tr>
             </thead>
             <tbody th:if="${not #lists.isEmpty(books)}">
@@ -25,15 +33,14 @@
                 <td th:text="${row.authorName}">authorName ...</td>
                 <td th:text="${row.yearOfPublication}">yearOfPublication ...</td>
                 <td th:text="${row.numOfCopies}">copies ...</td>
-                <td> <input
+                <td align="center"> <input
                         type="checkbox"
-                        th:field="${user.checkoutBooks}"
                         th:value="${row.id}"/></td>
             </tr>
             </tbody>
         </table>
-        <div class="col-xs-20">
-            <input type="submit" value="return"/>
+        <div align="right" th:if="${not #lists.isEmpty(books)}">
+            <button type="submit" class="btn btn-primary">Return</button>
         </div>
     </form>
     <table class="table table-bordered table-sm mt-2">
@@ -43,6 +50,8 @@
         </tr>
         </tbody>
     </table>
+    <a href="#" th:href="@{/books/}" >View All Books</a>
+    <p><a href="#" th:href="@{/}" >Home</a> </p>
 </div>
 </body>
 </html>
