--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,8 +12,16 @@
     <h2 align="center" th:text="${welcomeText}">Welcome ...</h2>
 </div>
 <div class="content-secondary">
-    <a href="#" th:href="@{/books}">View All books</a>
-    <a href="#" th:href="@{/users/viewCheckout}">View Your Checkout books</a>
+    <table>
+        <tr>
+            <td><a href="#" th:href="@{/books}">View All books</a></td>
+        </tr>
+        <tr>
+            <td><a href="#" th:href="@{/users/viewCheckout}">View Your Checkout books</a></td>
+        </tr>
+    </table>
+
+
 </div>
 
 </body>
