Add. Disable checkbox for checking out if no of copies is zero and correct alignment of links in index

--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -35,6 +35,7 @@
                 <td th:text="${row.numOfCopies}">copies ...</td>
                 <td><input
                         type="checkbox"
+                        th:disabled="${row.numOfCopies}==0"
                         th:field="${user.checkoutBooks}"
                         th:value="${row.id}"/></td>
             </tr>
