--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,12 +12,12 @@
     <h2 align="center" th:text="${welcomeText}">Welcome ...</h2>
 </div>
 <div class="content-secondary">
-    <table>
+    <table align="center">
         <tr>
-            <td><a href="#" th:href="@{/books}">View All books</a></td>
+            <td align="center"><a href="#" th:href="@{/books}" align="center">View All books</a></td>
         </tr>
         <tr>
-            <td><a href="#" th:href="@{/users/viewCheckout}">View Your Checkout books</a></td>
+            <td align="center"><a href="#" th:href="@{/users/viewCheckout}" align="center">View Your Checkout books</a></td>
         </tr>
     </table>
 
