Refactor. Change the links in index page
Co-authored-by:Vidhiya priya
<vidhiyapriya@gmail.com>

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
             <td align="center"><a align="center" href="#" th:href="@{/books}">View All books</a></td>
         </tr>
         <tr>
-            <td align="center"><a align="center" href="#" th:href="@{/users/viewCheckout}">View Your Checkout books</a>
+            <td align="center"><a align="center" href="#" th:href="@{/viewCheckout}">View Your Checkout books</a>
             </td>
         </tr>
     </table>
