--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -11,7 +11,7 @@
     <h2 align="center">Welcome to the Books page</h2>
 
     <div align="right">
-        <form method="get" th:action="@{/findbook}">
+        <form method="get" th:action="@{/books}">
             <input name="name" placeholder="Find by Book or Author Name" size="30" th:value="${name}" type="text">
             <button class="btn btn-primary" type="submit">Search</button>
         </form>
