--- a/src/main/resources/templates/viewcheckoutbooks.html
+++ b/src/main/resources/templates/viewcheckoutbooks.html
@@ -10,7 +10,7 @@
     <h2 align="center">Your Checkout Books</h2>
 
     <div align="right">
-        <form method="get" th:action="@{/findbook}">
+        <form method="get" th:action="@{/books}">
             <input name="name" placeholder="Find by Book or Author Name" size="30" th:value="${name}" type="text">
             <button class="btn btn-primary" type="submit">Search</button>
         </form>
