--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -6,16 +6,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-
+<header th:insert="header.html :: header"> </header>
 <div class="container mt-5">
-    <h2 align="center">Welcome to the Books page</h2>
-
-    <div align="right">
-        <form method="get" th:action="@{/books}">
-            <input name="name" placeholder="Find by Book or Author Name" size="30" th:value="${name}" type="text">
-            <button class="btn btn-primary" type="submit">Search</button>
-        </form>
+    <div class="d-flex justify-content-between">
+        <h2>Books</h2>
+        <div>
+            <form method="get" th:action="@{/books}">
+                <input name="name" placeholder="Find by Book or Author Name" size="30" th:value="${name}" type="text">
+                <button class="btn btn-primary" type="submit">Search</button>
+            </form>
+        </div>
     </div>
+
 
     <form method="POST" th:action="@{/checkout}" th:object="${user}">
         <table class="table table-bordered table-striped">
@@ -44,13 +46,13 @@
             </tbody>
         </table>
 
-        <div align="right" class="col-xs-20" th:if="${not #lists.isEmpty(books)}">
+        <div align="right" class="col-xs-20">
             <button class="btn btn-primary" type="submit">Checkout</button>
         </div>
 
     </form>
 
-    <table>
+    <table class="table table-bordered table-sm mt-2">
         <tbody th:if="${#lists.isEmpty(books)}">
         <tr>
             <td th:text="${message}"></td>
