--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,33 +3,26 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Bibiliotica</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .classlinkbook1{align:center;font-family:Times;font-size:20px;color:black}
-        .classlinkbook2{margin-left:500px;padding-right:35px}
-        .classlinkcheckout{padding-left:30px}
-
-    </style>
 </head>
 <body>
-<div class="content-main">
-    </br>
-    <h1 align="center">Biblioteca </h1>
-    </br>
-    <h2 align="center" th:text="${welcomeText}">Welcome ... </h2>
+<header th:insert="header.html :: header"> </header>
+<div class="content-main d-flex align-items-center mt-5">
+    <div class="container my-5">
+        <div class="row">
+            <div class="col-6">
+                <img class="w-100 rounded border shadow" th:src="@{images/books.jpeg}" />
+            </div>
+            <div class="col-6">
+                <div class="p-5 mt-4">
+                    <h2 align="center" class="mt-5 " th:text="${welcomeText}"> </h2>
+                    <h6 align="center" class="mt-2" th:text="${tagLineText}"></h6>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<div class="content-secondary">
-    <table align="center">
-        <tr>
-            <td align="center"><a align="center" href="#" th:href="@{/books}">View All books</a></td>
-        </tr>
-        <tr>
-            <td align="center"><a align="center" href="#" th:href="@{/viewCheckout}">View Your Checkout books</a>
-            </td>
-        </tr>
-    </table>
 
-</div>
 </body>
 </html>
