Update. resized books image
Co-authored-by: Nagukumar <nagupsgtech@gmail.com>

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class=" d-flex justify-content-center">
-            <img class="w-50 rounded shadow" th:src="@{images/books.jpeg}"/>
+            <img class="w-50 rounded shadow" th:src="@{images/books.jpg}"/>
         </div>
     </div>
 </div>
