--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -55,7 +55,7 @@
     <table class="table table-bordered table-sm mt-2">
         <tbody th:if="${#lists.isEmpty(books)}">
         <tr>
-            <td th:text="${message}"></td>
+            <td th:text="${errorMessage}"></td>
         </tr>
         </tbody>
     </table>
