--- a/src/main/resources/templates/viewcheckoutbooks.html
+++ b/src/main/resources/templates/viewcheckoutbooks.html
@@ -18,7 +18,7 @@
     </div>
 </div>
     <div>
-        <p style="color:green" th:text="${successMessage}"></p>
+        <p style="color:green" th:text="${message}"></p>
     </div>
 
     <form method="POST" th:action="@{/return}" th:object="${user}">
