--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+
 <header th:insert="header.html :: header"></header>
 <div class="container mt-5">
     <div class="d-flex justify-content-between">
@@ -50,10 +51,13 @@
         </table>
 
         <div align="right" class="col-xs-20">
-            <button class="btn btn-primary" type="submit">Checkout</button>
+            <button class="btn btn-primary" onclick= "checkNumber()" type="submit">Checkout</button>
         </div>
 
     </form>
+    <div th:if="${#lists.isEmpty(books)}">
+        <p colspan="3" th:text="${errorMessage}">Sorry!No Books in library</p>
+    </div>
 
 </div>
 
