--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -6,7 +6,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-
+<script type="text/javascript">
+    function btnClick(){
+        var checkboxes = document.querySelectorAll("#mytable :checked").length;
+        if(checkboxes == 0){
+        alert("You have to select a book to checkout.");
+        return false;
+        }
+        if(checkboxes > 1){
+        alert("You can select only four books for checkout");
+        return false;
+        }
+    };
+</script>
 <header th:insert="header.html :: header"></header>
 <div class="container mt-5">
     <div class="d-flex justify-content-between">
@@ -24,7 +36,7 @@
     </div>
 
     <form method="POST" th:action="@{/checkout}" th:object="${user}">
-        <table class="table table-bordered table-striped">
+        <table class="table table-bordered table-striped" id="mytable">
             <thead th:if="${not #lists.isEmpty(books)}">
             <tr>
                 <th>Book Name</th>
@@ -51,7 +63,7 @@
         </table>
 
         <div align="right" class="col-xs-20">
-            <button class="btn btn-primary" onclick= "checkNumber()" type="submit">Checkout</button>
+            <button class="btn btn-primary" id="checkout" onclick="return btnClick()" type="submit">Checkout</button>
         </div>
 
     </form>
