--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -10,7 +10,7 @@
     function btnClick(){
         var checkboxes = document.querySelectorAll("#mytable :checked").length;
         if(checkboxes == 0){
-        alert("You have to select a book to checkout.");
+        alert("Please select a book to checkout");
         return false;
         }
         if(checkboxes > 4){
@@ -18,6 +18,7 @@
         return false;
         }
     };
+
 </script>
 <header th:insert="header.html :: header"></header>
 <div class="container mt-5">
