--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
     Invalid username and password.
 </div>
 <div th:if="${param.logout}" class="text-center mt-4">
-    Thank you for using Bibilioteca!
+    Thank you for using Biblioteca!
 </div>
 <div class="container w-25 mt-4 p-5 border rounded shadow">
     <form th:action="@{/login}" method="post">
