--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 <header th:insert="header.html :: header"></header>
+<div>
+    <p style="color:green" th:text="${message}"></p>
+</div>
 <div class="content-main d-flex align-items-center">
     <div class="container">
         <div class="row">
